update placeholder text on home page, fix related spec blocks sometimes being too tall.

--- a/gatsby-theme-marketing/src/scss/components/ExploreSpec.scss
+++ b/gatsby-theme-marketing/src/scss/components/ExploreSpec.scss
@@ -59,7 +59,6 @@
 
 .RelatedSpecs--wrapper {
   background-color: #fff;
-  width: 310px;
   margin-right: 30px;
   margin-bottom: 30px;
   box-sizing: border-box;
